--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,4 @@
-add_executable(point_to_raw point_to_raw.cpp types.cpp import_las.cpp
-	tinyxml2.cpp)
-target_link_libraries(point_to_raw ${LIBS})
+add_executable(point_to_raw point_to_raw.cpp types.cpp import_las.cpp tinyxml2.cpp)
+target_link_libraries(point_to_raw ${LASTOOLS_LIBRARIES})
 install(TARGETS point_to_raw DESTINATION ${POINT_TO_IDX_INSTALL_DIR})
 
