Adding branch which uses visus idx libs to write a sample idx file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
-cmake_minimum_required(VERSION 2.6)
-project(POINT_TO_IDX)
+cmake_minimum_required(VERSION 2.8.12)
+project(PARTICLE_TO_IDX)
 
 # Bump up warning levels appropriately for each compiler
-if (${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU" OR ${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic --std=c++14")
+if (UNIX OR APPLE OR MINGW)
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -std=c++14")
 	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -m64 -ggdb -DDEBUG")
 	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -m64 -O3 -march=native -DNDEBUG")
-elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL "MSVC")
+elseif (MSVC)
 	if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
 		string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zi")
 	else()
@@ -14,15 +14,13 @@ elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL "MSVC")
 	endif()
 endif()
 
-set(POINT_TO_IDX_INSTALL_DIR "${POINT_TO_IDX_SOURCE_DIR}/bin")
-
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${POINT_TO_IDX_SOURCE_DIR}/cmake")
-find_package(LAStools REQUIRED)
-
-if(NOT LASTOOLS_FOUND)
-	message(FATAL_ERROR "Could not find LAStools (did you set $LASTOOLS_DIR?)")
-endif()
-
-include_directories(include ${LASTOOLS_INCLUDE_DIRS})
+find_package(Visus REQUIRED)
+set(VISUS_LIBRARIES "${VISUS_LINK_DIRECTORIES}/VisusIdx.lib"
+	"${VISUS_LINK_DIRECTORIES}/VisusKernel.lib"
+	"${VISUS_LINK_DIRECTORIES}/VisusDb.lib")
+string(REGEX REPLACE "\\.lib" ".dll" VISUS_SHARED_LIBRARIES "${VISUS_LIBRARIES}")
+string(REGEX REPLACE "lib" "bin" VISUS_SHARED_LIBRARIES "${VISUS_SHARED_LIBRARIES}")
+install(FILES ${VISUS_SHARED_LIBRARIES} DESTINATION .)
+include_directories(${VISUS_INCLUDE_DIRECTORIES})
 add_subdirectory(src)
 
