The visus package config script is not correctly written
fix the windows specific hack to be cross-platform

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,13 +14,17 @@ elseif (MSVC)
 	endif()
 endif()
 
+# The visus package script isn't properly written so
+# we need to explicitly include the visus lib dir to link
+# against the Visus libraries easily.
 find_package(Visus REQUIRED)
-set(VISUS_LIBRARIES "${VISUS_LINK_DIRECTORIES}/VisusIdx.lib"
-	"${VISUS_LINK_DIRECTORIES}/VisusKernel.lib"
-	"${VISUS_LINK_DIRECTORIES}/VisusDb.lib")
-string(REGEX REPLACE "\\.lib" ".dll" VISUS_SHARED_LIBRARIES "${VISUS_LIBRARIES}")
-string(REGEX REPLACE "lib" "bin" VISUS_SHARED_LIBRARIES "${VISUS_SHARED_LIBRARIES}")
-install(FILES ${VISUS_SHARED_LIBRARIES} DESTINATION .)
+link_directories(${VISUS_LINK_DIRECTORIES})
+
+# Small hack: install the visus shared libs on Windows to our exe dir
+if (MSVC)
+	install(FILES ${VISUS_SHARED_LIBRARIES} DESTINATION .)
+endif()
+
 include_directories(${VISUS_INCLUDE_DIRECTORIES})
 add_subdirectory(src)
 
