--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(particle_idx particle_idx.cpp)
-message("visus kernel libs ${VISUS_KERNEL_LINK_LIBRARIES}")
-target_link_libraries(particle_idx ${VISUS_KERNEL_LINK_LIBRARIES} ${VISUS_LIBRARIES})
+target_link_libraries(particle_idx VisusIdx VisusKernel VisusDb
+	${VISUS_KERNEL_LINK_LIBRARIES})
 install(TARGETS particle_idx DESTINATION .)
 
