turn off particle idx

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,28 +14,6 @@ elseif (MSVC)
 	endif()
 endif()
 
-# The visus package script isn't properly written so
-# we need to explicitly include the visus lib dir to link
-# against the Visus libraries easily.
-find_package(Visus REQUIRED)
-link_directories(${VISUS_LINK_DIRECTORIES})
-
-# Small hack: install the visus shared libs on Windows to our exe dir
-if (MSVC)
-	set(VISUS_SHARED_LIBRARIES "${VISUS_LINK_DIRECTORIES}/VisusIdx.dll"
-		"${VISUS_LINK_DIRECTORIES}/VisusKernel.dll"
-		"${VISUS_LINK_DIRECTORIES}/VisusDb.dll")
-	string(REGEX REPLACE "lib" "bin" VISUS_SHARED_LIBRARIES "${VISUS_SHARED_LIBRARIES}")
-else ()
-	set(VISUS_SHARED_LIBRARIES "${VISUS_LINK_DIRECTORIES}/libVisusIdx.so"
-		"${VISUS_LINK_DIRECTORIES}/libVisusKernel.so"
-		"${VISUS_LINK_DIRECTORIES}/libVisusDb.so")
-endif()
-
-# Small hack to copy the visus shared libs to my executable's dir
-install(FILES ${VISUS_SHARED_LIBRARIES} DESTINATION bin)
-
-include_directories(include ${VISUS_INCLUDE_DIRECTORIES})
 add_subdirectory(src)
 
 option(PARTICLE_IDX_VL_PLUGIN OFF "Build the vislight plugin")
@@ -43,7 +21,7 @@ if (PARTICLE_IDX_VL_PLUGIN)
 	get_plugin_name(plugin_name "particle_idx")
 	get_plugin_resource_dir(plugin_res_dir "particle_idx")
 	add_library(${plugin_name} MODULE particle_idx_plugin.cpp)
-	target_link_libraries(${plugin_name} vl VisusIdx VisusKernel VisusDb)
+	target_link_libraries(${plugin_name} vl)
 	install(TARGETS ${plugin_name} DESTINATION bin)
 	install(FILES particle_idx_frag.glsl particle_idx_vert.glsl
 		DESTINATION ${plugin_res_dir})
