--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_executable(particle_idx particle_idx.cpp)
-target_link_libraries(particle_idx VisusIdx VisusKernel VisusDb)
-install(TARGETS particle_idx DESTINATION bin)
+
+#add_executable(particle_idx particle_idx.cpp)
+#target_link_libraries(particle_idx VisusIdx VisusKernel VisusDb)
+#install(TARGETS particle_idx DESTINATION bin)
 
