--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 2.8.12)
-project(PARTICLE_TO_IDX)
+cmake_minimum_required(VERSION 3.2)
+project(PARTICLE_LASSO)
 
 # Bump up warning levels appropriately for each compiler
 if (UNIX OR APPLE OR MINGW)
@@ -14,17 +14,6 @@ elseif (MSVC)
 	endif()
 endif()
 
-add_subdirectory(src)
-
-option(PARTICLE_IDX_VL_PLUGIN OFF "Build the vislight plugin")
-if (PARTICLE_IDX_VL_PLUGIN)
-	get_plugin_name(plugin_name "particle_idx")
-	get_plugin_resource_dir(plugin_res_dir "particle_idx")
-	add_library(${plugin_name} MODULE particle_idx_plugin.cpp)
-	target_link_libraries(${plugin_name} vl)
-	install(TARGETS ${plugin_name} DESTINATION bin)
-	install(FILES particle_idx_frag.glsl particle_idx_vert.glsl
-		DESTINATION ${plugin_res_dir})
-endif()
-
+add_subdirectory(lasso)
+add_subdirectory(vislight_plugin)
 
