port in cosmic web loader

--- a/lasso/CMakeLists.txt
+++ b/lasso/CMakeLists.txt
@@ -1,10 +1,12 @@
 option(PARTICLE_LASSO_ENABLE_LIDAR "Build Lidar data support, via LAStools" OFF)
 
 set(LASSO_SRC import_scivis16.cpp import_xyz.cpp
-	import_uintah.cpp tinyxml2.cpp types.cpp)
+	import_uintah.cpp tinyxml2.cpp types.cpp
+	import_cosmic_web.cpp)
 
 set(LASSO_HEADERS import_scivis16.h import_xyz.h
-	import_uintah.h tinyxml2.h types.h particle_lasso.h)
+	import_uintah.h tinyxml2.h types.h particle_lasso.h
+	import_cosmic_web.h)
 
 configure_file(particle_lasso_cfg.h.in particle_lasso_cfg.h)
 
