clean up include pragmas

--- a/lasso/CMakeLists.txt
+++ b/lasso/CMakeLists.txt
@@ -2,11 +2,11 @@ option(PARTICLE_LASSO_ENABLE_LIDAR "Build Lidar data support, via LAStools" OFF)
 
 set(LASSO_SRC import_scivis16.cpp import_xyz.cpp
 	import_uintah.cpp tinyxml2.cpp types.cpp
-	import_cosmic_web.cpp)
+	import_cosmic_web.cpp import_pkd.cpp)
 
 set(LASSO_HEADERS import_scivis16.h import_xyz.h
 	import_uintah.h tinyxml2.h types.h particle_lasso.h
-	import_cosmic_web.h)
+	import_cosmic_web.h import_pkd.h)
 
 configure_file(particle_lasso_cfg.h.in particle_lasso_cfg.h)
 
